--- a/styles.css
+++ b/styles.css
@@ -24,10 +24,10 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* max-width:100vw; */
-    width: 350px;
+    max-width: 100%;
+    width: 310px;
     margin: 30px;
-    padding: 30px;
+    padding: 20px;
     box-shadow: 10px 10px black;
     
 }
@@ -40,8 +40,17 @@ h4{
     
    
 }
+
+h4:hover{
+    background-color: hsl(47, 88%, 63%) ;
+}
+.sub:hover{
+    color: hsl(47, 88%, 63%) ;
+    cursor: pointer;
+}
 h3,h4{
     font-weight: 800;
+    
 }
 
 .avatar{
@@ -56,8 +65,3 @@ h3,h4{
     
 }
 
-@media screen  and (max-width:522){
-    .card{max-width:350px;
-    }
-    
-}
